kubernetes/apps/observability/kubernetes-dashboard/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-dashboard
spec:
  hostnames:
    - dashboard.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: http
  rules:
    - backendRefs:
        - name: kubernetes-dashboard-web
          namespace: observability
          port: 8000
